--- a/public/slide/css/style.css
+++ b/public/slide/css/style.css
@@ -228,6 +228,7 @@ h3{
 }
 
 
+
 /*derrick*/
 .auto-img{
     max-width: 96%;
@@ -265,6 +266,45 @@ strike{
     background: #ccc;
     border-radius: 6px;
     margin-right: 10px;
+}
+
+.demo-frame{
+    width: 320px;
+    height: 568px;
+    border: 1px solid #000;
+}
+.p-info{
+    display: inline-block;
+    font-size: 18px;
+    vertical-align: top;
+    padding: 0 15px;
+    line-height: 150px;
+    color: green;
+    text-align: center;
+}
+
+.qr-btn{
+    width: 50px;
+    height: 50px;
+    background: rgba(0,0,0,.7);
+    box-shadow: 1px 1px 5px rgba(0,0,0,.3),-1px -1px 5px rgba(0,0,0,.3);
+    border-radius: 5px;
+    position: fixed;
+    z-index: 105;
+    left: 20px;
+    top: 20px;
+    display: none;
+    transition: all .5s;
+    padding: 2px;
+}
+.qr-btn img{
+    width: 100%;
+    height: 100%;
+}
+.open-qr{
+    width: 500px;
+    height: 500px;
+    padding: 10px;
 }
 /*derrick*/
 
