--- a/public/slide/css/style.css
+++ b/public/slide/css/style.css
@@ -311,7 +311,7 @@ strike{
 
 
 /*magic*/
-
+.font-green{color:green;}
 /*magic*/
 
 
@@ -325,10 +325,10 @@ strike{
 
 /*tom*/
 .chat{
-    
+
 }
 .chat.chat-1{
-    
+
 }
 .chat.chat-1 .content-right{
     float: right;
@@ -337,7 +337,7 @@ strike{
 .chat.chat-1 .content-right p{
     font-size: 22px;
     margin-top: 20px;
-    
+
 }
 .chat.chat-1 .content-right ul{
     list-style-type: disc;
@@ -345,17 +345,34 @@ strike{
     font-size: 22px;
 }
 
-.chat.chat-2 .content p{
+.chat.chat-1 .content-right p.dd{
+    font-size: 20px;
+    margin-top: 5px;
+}
+
+.chat.chat-1 .content-right img{
+    max-width: 100px;
+    margin-right: 20px;
+}
+
+.chat.chat-1 #qr-layer{
+    position: absolute; width: 100%;height: 100%; background-color: #000;top:0px;left: 0px;opacity:.9;
+    text-align: center;
+    display: none;
+}
+.chat.chat-1 #qr-wrap{
+    position: absolute; background-color: #fff;top:20px;left: 129px;opacity:.9;
+    text-align: center;
+    display: none;
+}
+.chat.chat-1 #qr-wrap img{
+    max-height: 650px;
     text-align: center;
 }
 
-.chat.chat-2 .content img{
-    max-width: 250px;
-    margin-right: 50px;
-}
 .chat.chat-3 .content p{
-   font-size: 22px;
-   margin-top: 20px;
+    font-size: 22px;
+    margin-top: 20px;
 }
 .chat.chat-3 .content ul{
     list-style-type: disc;
@@ -366,7 +383,7 @@ strike{
     margin: 10px 0px;
 }
 .chat.chat-3 .content p img{
-   max-width: 150px;
-   margin-right: 5px;
+    max-width: 150px;
+    margin-right: 5px;
 }
 /*tom*/
