--- a/public/slide/css/style.css
+++ b/public/slide/css/style.css
@@ -378,6 +378,30 @@ ul.intro li{
     text-align: center;
 }
 
+.chat.chat-2 .content p{
+    font-size: 22px;
+    margin-top: 20px;
+}
+.chat.chat-2 .content ul{
+    list-style-type: disc;
+    padding-left: 30px;
+    font-size: 22px;
+}
+.chat.chat-2 .content li{
+    margin: 10px 0px;
+	cursor: pointer;
+}
+.chat.chat-2  li p{
+    display: none;
+}
+.chat.chat-2 li p img{
+    max-height: 450px;
+    margin-right: 5px;
+}
+.chat.chat-2 .imgList img{
+    max-height: 250px;
+    margin-right: 5px;
+}
 .chat.chat-3 .content p{
     font-size: 22px;
     margin-top: 20px;
@@ -389,9 +413,29 @@ ul.intro li{
 }
 .chat.chat-3 .content li{
     margin: 10px 0px;
+	cursor: pointer;
+	line-height: 40px;
 }
-.chat.chat-3 .content p img{
-    max-width: 150px;
-    margin-right: 5px;
+.chat.chat-3 .content li img{
+    max-height: 30px;
+	vertical-align:middle;
+	margin-left: 10px;
+}
+.chat.chat-3  li p{
+    display: none;
+}
+.chat.chat-3 #qr-layer{
+    position: absolute; width: 100%;height: 100%; background-color: #000;top:0px;left: 0px;opacity:.9;
+    text-align: center;
+    display: none;
+}
+.chat.chat-3 #qr-wrap{
+    position: absolute; background-color: #fff;top:150px;left: 225px;opacity:.9;
+    text-align: center;
+    display: none;
+}
+.chat.chat-3 #qr-wrap img{
+    max-height: 650px;
+    text-align: center;
 }
 /*tom*/
