--- a/photowall/views/layout.html
+++ b/photowall/views/layout.html
@@ -43,7 +43,7 @@
             <li><a href="/user">{{user.email}}</a></li>
             <li><a href="/logout">Logout</a></li>
             {{else}}
-            <li><a href="/login" class="text-capitalize">my photo</a></li>
+            <li><a href="/user" class="text-capitalize">my photo</a></li>
             {{/if}}
           </ul>
         </div><!-- /.navbar-collapse -->
