--- a/public/slide/css/style.css
+++ b/public/slide/css/style.css
@@ -28,7 +28,7 @@ body {
     line-height: 1;
 }
 ol, ul {
-    list-style: none;
+    /* list-style: none; */
 }
 blockquote, q {
     quotes: none;
@@ -334,6 +334,42 @@ strike{
 
 
 /*magic*/
+@font-face {
+    font-family: 'digital-7';
+    src: url('../../digital-7.ttf');
+}
+@font-face {
+    font-family: 'Aaargh';
+    src: url('fonts/Aaargh.ttf');
+}
+@font-face {
+    font-family: 'FFF_Tusj';
+    src: url('fonts/FFF_Tusj.ttf');
+}
+.font-1{
+    font-family:'Aaargh'
+}
+.font-2{
+    font-family:'FFF_Tusj'
+}
+.font-bold{
+    font-weight:bold;
+}
+.font-shadow{
+    text-shadow:1px solid 1px 1px;
+}
+.font-demo{
+    text-align: center;
+  font-size: 12em;
+  line-height: 1em;
+  background: none;
+  border: 0;
+  color: white;
+  width: 100%;
+}
+.font-capitalize{
+    text-transform:capitalize;
+}
 .font-green{color:green;}
 ul.intro{
     list-style-type: disc;
@@ -371,13 +407,13 @@ pre {
 }
 .h5logo{
     position: absolute;
-right: 100px;
-top: 30%;
+    right: 100px;
+    top: 30%;
 }
-.firstpage-title{   
-position: absolute;
-top: 20%;
-width: 55%;
+.firstpage-title{
+    position: absolute;
+    top: 20%;
+    width: 55%;
 }
 .firstpage-title q{
     text-align: left;
@@ -387,7 +423,11 @@ width: 55%;
 
 }
 .trend li{
-    margin:0.5em 0;
+    margin: 0.5em;
+  display: inline-block;
+  min-width: 10em;
+  font-size: 1.8em;
+  line-height: 1.4em;
 }
 .normal-title{
 
@@ -395,11 +435,28 @@ width: 55%;
 .code div{
     width: 20%;
     display: inline-block;
-    padding: 3em 5em;
+    padding: 2em 5em;
 }
 .code div input{
     line-height:2em;
     width: 19em;
+}
+
+.wechatBg{
+    opacity:0.2;
+    position:absolute;
+    right:1em;
+    bottom:1em;
+}
+
+.sdk h3{
+  display: inline-block;
+  padding: 1em;
+  border-radius: 5px;
+  min-width: 6em;
+  text-align: center;
+  margin: 0.5em;
+  background: rgb(66, 66, 66);
 }
 /*magic*/
 
@@ -494,7 +551,7 @@ width: 55%;
 }
 .chat.chat-2 .content li{
     margin: 10px 0px;
-	cursor: pointer;
+    cursor: pointer;
 }
 .chat.chat-2  li p{
     display: none;
@@ -518,13 +575,13 @@ width: 55%;
 }
 .chat.chat-3 .content li{
     margin: 10px 0px;
-	cursor: pointer;
-	line-height: 40px;
+    cursor: pointer;
+    line-height: 40px;
 }
 .chat.chat-3 .content td img{
     max-height: 30px;
-	vertical-align:middle;
-	margin-left: 10px;
+    vertical-align:middle;
+    margin-left: 10px;
 }
 .chat.chat-3  li p{
     display: none;
@@ -545,44 +602,44 @@ width: 55%;
 }
 .chat.chat-3 table td{
     text-align: left;
-	padding-left: 10px;
+    padding-left: 10px;
 }
 /*tom*/
 
 /* This sets the dimensions of the Progress Bar element */
 progress {
-  width: 300px;
-  height: 17px;
-        display: block;
-        /* turn off defaults */
-        -webkit-appearance: none;
-        border: none;
-  width: 100%; */  /* height: 10%; */;
-  height: 10%;
-  margin: 30% 0 10% 0;
+    width: 300px;
+    height: 17px;
+    display: block;
+    /* turn off defaults */
+    -webkit-appearance: none;
+    border: none;
+    width: 100%; */  /* height: 10%; */;
+    height: 10%;
+    margin: 30% 0 10% 0;
 }
 
 /* This rule sets the appearance of the progress bar background */
 progress::-webkit-progress-bar {
-        background: black;
-        border-radius: 50px;
-        padding: 2px;
-        box-shadow: 0 1px 0px 0 rgba(255, 255, 255, 0.2);
+    background: black;
+    border-radius: 50px;
+    padding: 2px;
+    box-shadow: 0 1px 0px 0 rgba(255, 255, 255, 0.2);
 }
 
 /* This rule sets the appearance of the progress bar meter */
 progress::-webkit-progress-value {
     border-radius: 50px;
-          box-shadow: inset 0 1px 1px 0 rgba(255, 255, 255, 0.4);  
+    box-shadow: inset 0 1px 1px 0 rgba(255, 255, 255, 0.4);
     background-size: 30px 30px;
     background-image: linear-gradient(135deg, rgba(255, 255, 255, .15) 25%, transparent 25%,
-                      transparent 50%, rgba(255, 255, 255, .15) 50%, rgba(255, 255, 255, .15) 75%,
-                      transparent 75%, transparent);
-                        -webkit-animation: move 1s linear 0 infinite;   
-                   
+    transparent 50%, rgba(255, 255, 255, .15) 50%, rgba(255, 255, 255, .15) 75%,
+    transparent 75%, transparent);
+    -webkit-animation: move 1s linear 0 infinite;
+
 }
 
 @-webkit-keyframes move {
-        0% {background-position: 0px 0px, 0 0, 0 0}
-        100% {background-position: -80px 0px, 0 0, 0 0}
+    0% {background-position: 0px 0px, 0 0, 0 0}
+    100% {background-position: -80px 0px, 0 0, 0 0}
 }
