--- a/public/slide/css/style.css
+++ b/public/slide/css/style.css
@@ -374,6 +374,49 @@ strike{
 
 
 /*magic*/
+.animated {
+    -webkit-animation-duration: 5s;
+    animation-duration: 5s;
+    animation-delay:2s;
+    -webkit-animation-delay:2s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+}
+
+.animated.infinite {
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
+}
+
+@-webkit-keyframes zoomIn {
+    0% {
+        opacity: 0;
+        -webkit-transform: scale3d(.3, .3, .3);
+        transform: scale3d(.3, .3, .3);
+    }
+
+    50% {
+        opacity: 1;
+    }
+}
+
+@keyframes zoomIn {
+    0% {
+        opacity: 0;
+        -webkit-transform: scale3d(.3, .3, .3);
+        transform: scale3d(.3, .3, .3);
+    }
+
+    50% {
+        opacity: 1;
+    }
+}
+
+.zoomIn {
+    -webkit-animation-name: zoomIn;
+    animation-name: zoomIn;
+}
+
 @font-face {
     font-family: 'digital-7';
     src: url('../../digital-7.ttf');
